$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-31 (opened October 3, 2009)

	* constrained ordination (cca, rda, capscale) did not analyse
	constrained component in model like cca(varespec ~ Al:P +
	Condition(Al + P)) or in constrained interaction terms if the
	corresponding main effects were partialled out.

	* constrained ordination (cca, rda, capscale) failed if they only
	had partial term Condition() without constraints.

	* ordistep: new function for automatic model choice in the cca
	family of methods. This is similar to step(), but uses permutation
	P-values instead of AIC (that does not exist for these methods,
	and sometimes fails). This is similar to forward.sel() in Stephane
	Dray's 'packfor' package at R-Forge. Better things here are that
	the function has both drop and add instead of only forward
	selection, handles correctly factors, and works with cca(), rda()
	and capscale(). On the other hand, it is much slower than
	forward.sel(). The function has similar user interface as step():
	it knows 'scope' and 'direction'.

	* ordisurf: pushes out limits of convex hull so that contours
	better cover corners and margins of points.

	* plot.decorana & plot.cca: use linestack() if only one dimension
	was chosen.

	* scores.lda: new function to extract row scores and predictor
	coefficients from "lda" objects (MASS package). Magically,
	ordiplot() started to work with "lda" results. Not yet documented,
	but alias in scores.default.Rd.

	* ordiplot: uses linestack() to plot 1-col results, and now really
	is able to identify if there were no species scores (tried
	earlier, but failed because species had different names than
	sites). 
	
	* scores.default: returns vector scores as 1-col matrix.

	* linestack: passes "..." to plot(), handles missing names.
	
Version 1.16-30 (closed October 3, 2009) 

	* manual pages (Rd files) were run through aspell. With this, an
	error in an argument choice was corrected also in